# xpy_teal

./: .gitignore  README.md  pyproject.toml  requirements.txt
Codes/: dataIO.py  download_xp_spectra.py  line_analysis.py  main.py  spectrum_tools.py  tutorial.ipynb  xpy_teal_pipeline.py
Data/: Test_EqWidths.csv  source_ids.csv  test.xml
examples/: tutorial.ipynb
src/xpy_teal/: __init__.py
src/xpy_teal/Codes/: config.py  dataIO.py  download_xp_spectra.py  main.py  spectrum_tools.py  xpy_teal_pipeline.py
